fixed field resolving mode fo INSERT/REPLACE and CRETE with SELECT (BUG#4090)